# git-multi

./: .gitattributes  .gitlab-ci.yml  MANIFEST.in  README.rst  setup.cfg  setup.py
src/git_multi/: __init__.py  __main__.py  _version.py  alias.py  cli.py  conf.py  repository.py  shell.py
src/git_multi/commands/: __init__.py  broadcast.py  init.py  items.py  register.py
tests/: __init__.py  test_broadcast.py  test_conf.py  test_init.py  test_items.py  test_register.py
tests/fixtures/: config.cfg
