[versioneer]
VCS = git
style = pep440
versionfile_source = src/git_multi/_version.py
versionfile_build =
tag_prefix = v

[metadata]
description-file = README.rst

[flake8]
exclude = _version.py
ignore = F403
max-complexity = 10
max-line-length = 80

[wheel]
universal = 1

[bdist_wheel]
universal = 1

[coverage:run]
omit =
    src/git_multi/_version.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise AssertionError
    raise NotImplementedError
    if 0:
    if __name__ == .__main__.:
    except ImportError:

[coverage:html]
title = Git-multi command

[pytest]
flake8-flake8 =
    tests/*.py ALL
